Fix menu z-index to be on very top

--- a/application/static/builds/style.css
+++ b/application/static/builds/style.css
@@ -97,7 +97,7 @@
         -moz-user-select: none; /* Old versions of Firefox */
         -ms-user-select: none; /* Internet Explorer/Edge */
         transition: all 300ms ease-in-out;
-        z-index: 1;
+        z-index: 15;
     }
 
         .header_menu.toggle {
